// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index renders post-launch index content when claimantShowAuth is true 1`] = `
<Fragment>
  <Title
    seoTitle="Massachusetts Paid Family and Medical Leave"
  >
    <Trans
      components={
        Object {
          "mass-paid-leave-link": <a
            href="https://www.mass.gov/topics/paid-family-and-medical-leave-in-massachusetts"
            rel="noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.index.title"
      tOptions={
        Object {
          "context": null,
        }
      }
    />
  </Title>
  <div
    className="margin-top-6 measure-7"
  >
    <Heading
      level="2"
    >
      Create an account
    </Heading>
    <div
      className="grid-row grid-gap"
    >
      <article
        className="tablet:grid-col margin-bottom-3"
      >
        <div
          className="bg-base-lightest padding-3"
        >
          <Heading
            level="3"
          >
            Employers
          </Heading>
          <p>
            Register now so you can manage leave for your team.
          </p>
          <ButtonLink
            className="margin-top-3"
            href="/employers/create-account"
          >
            Create an employer account
          </ButtonLink>
          <div
            className="margin-top-2 text-dark text-bold"
          >
            Have an account?
            <Link
              href="/login"
            >
              <a
                className="display-inline-block margin-left-1"
              >
                Log in
              </a>
            </Link>
          </div>
        </div>
      </article>
      <article
        className="tablet:grid-col"
      >
        <div
          className="bg-base-lightest padding-3"
        >
          <Heading
            level="3"
          >
            Workers
          </Heading>
          <p>
            You can now create an account and apply for Paid Family and Medical Leave.
          </p>
          <ButtonLink
            className="margin-top-3"
            href="/create-account"
          >
            Create an account
          </ButtonLink>
          <div
            className="margin-top-2 text-dark text-bold"
          >
            Have an account?
            <Link
              href="/login"
            >
              <a
                className="display-inline-block margin-left-1"
              >
                Log in
              </a>
            </Link>
          </div>
        </div>
      </article>
    </div>
  </div>
</Fragment>
`;

exports[`Index renders post-launch index content when claimantShowAuth is true 2`] = `
Array [
  "Massachusetts workers can now apply for Paid Family and Medical Leave. Learn more about this ",
  <a
    href="https://www.mass.gov/topics/paid-family-and-medical-leave-in-massachusetts"
    key="1"
    rel="noopener"
    target="_blank"
  >
    new paid leave program
  </a>,
  ".",
]
`;

exports[`Index renders pre-launch index content 1`] = `
<Fragment>
  <Title
    seoTitle="Massachusetts Paid Family and Medical Leave"
  >
    <Trans
      components={
        Object {
          "mass-paid-leave-link": <a
            href="https://www.mass.gov/topics/paid-family-and-medical-leave-in-massachusetts"
            rel="noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.index.title"
      tOptions={
        Object {
          "context": "prelaunch",
        }
      }
    />
  </Title>
  <div
    className="margin-top-6 measure-7"
  >
    <Heading
      level="2"
    >
      Create an account
    </Heading>
    <div
      className="grid-row grid-gap"
    >
      <article
        className="tablet:grid-col margin-bottom-3"
      >
        <div
          className="bg-base-lightest padding-3"
        >
          <Heading
            level="3"
          >
            Employers
          </Heading>
          <p>
            Register now so your team is ready for when workers can start requesting leave.
          </p>
          <ButtonLink
            className="margin-top-3"
            href="/employers/create-account"
          >
            Create an employer account
          </ButtonLink>
          <div
            className="margin-top-2 text-dark text-bold"
          >
            Have an account?
            <Link
              href="/login"
            >
              <a
                className="display-inline-block margin-left-1"
              >
                Log in
              </a>
            </Link>
          </div>
        </div>
      </article>
      <article
        className="tablet:grid-col"
      >
        <div
          className="bg-base-lightest padding-3"
        >
          <Heading
            level="3"
          >
            Workers
          </Heading>
          <p>
            <Trans
              components={
                Object {
                  "mass-benefits-timeline-link": <a
                    href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-timeline#december-2,-2020-"
                  />,
                }
              }
              i18nKey="pages.index.claimantCardBodyPrelaunch"
            />
          </p>
        </div>
      </article>
    </div>
  </div>
</Fragment>
`;

exports[`Index renders pre-launch index content 2`] = `"Massachusetts employers: Register now so you can manage leave for your team."`;

exports[`Index renders pre-launch index content 3`] = `
Array [
  "Later this month, you can create an account to apply for Paid Family and Medical Leave. ",
  <a
    href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-timeline#december-2,-2020-"
    key="1"
  >
    Learn more about the paid leave benefit timeline.
  </a>,
]
`;
